# alprstream_sample

./: CMakeLists.txt  alprstream_images.cpp  alprstream_sample_rawframe.cpp  alprstream_sample_videofile.cpp  alprstream_sample_videostream.cpp  readme.md
